# hok

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: cicd.yml
crates/libscoop/: Cargo.toml
crates/libscoop/src/: bucket.rs  config.rs  env.rs  event.rs  inventory.rs  lib.rs  operation.rs  persist.rs  session.rs  shim.rs  status.rs
crates/libscoop/src/internal/: archive.rs  dag.rs  fs.rs  git.rs
crates/libscoop/src/package/: cleanup.rs  download.rs  manifest.rs  mod.rs  sync.rs
crates/scoop_hash/: Cargo.toml
src/: cui.rs
src/cmd/: bucket.rs  cache.rs  cleanup.rs  install.rs  list.rs  mod.rs  status.rs  update.rs  upgrade.rs
